# octopod

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump-version.yml  ci.yml
.plans/: architecture.md  orchestration-design.md
src/: lib.rs  main.rs
src/agent/: agent_loop.rs  ai_client.rs  mod.rs  runner.rs
src/backends/: ironclaw.rs  mod.rs  types.rs
src/cli/: agent.rs  config.rs  cortex.rs  db.rs  decide.rs  doctor.rs  init.rs  issues.rs  mod.rs  spawn.rs  status.rs  stop.rs  task.rs
src/cli/onboarding/: banner.rs  mod.rs  prerequisites.rs  ui.rs
src/coding/: mod.rs  opencode.rs  types.rs
src/core/: company.rs  config.rs  department.rs  error.rs  mod.rs  workspace.rs
src/departments/: mod.rs
src/git/: mod.rs
src/platform/: ceo_dashboard.rs  mod.rs  omarchy.rs  spawn_manager.rs  types.rs
src/state/: decision_file.rs  initiative_file.rs  lib.rs  manager.rs  message_bus.rs  mod.rs  task_file.rs
src/state/backup/: mod.rs
src/state/entities/: mod.rs
src/state/migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_add_acceptance_criteria.sql  004_add_file_path.sql  005_backfill_task_files.sql  006_add_roadmaps_meetings.sql  007_add_decision_severity.sql  008_update_initiative_status.sql  009_add_initiative_message_types.sql  010_add_agent_sessions.sql  011_add_decisions_deleted_at.sql  012_add_initiative_file_path.sql  013_add_decision_file_path.sql  014_fix_initiative_status_id.sql  015_fix_roadmap_status_id.sql  016_convert_initiative_status_to_text.sql  mod.rs
src/state/repositories/: activity_repo.rs  agent_repo.rs  agent_session_repo.rs  company_repo.rs  conversation_repo.rs  decision_repo.rs  department_repo.rs  initiative_repo.rs  meeting_participant_repo.rs  meeting_repo.rs  message_repo.rs  (+3 more)
src/tui/: app.rs  ceo_dashboard.rs  department.rs  mock.rs  mod.rs
(+2 files in other folders)
