[package]
name = "octopod"
version = "0.1.0"
edition = "2021"
authors = ["Octopod Contributors"]
description = "Many-Armed Company Orchestration - AI-Powered Software Development Teams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajsongpilot/octopod"
keywords = ["ai", "agents", "tui", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[[bin]]
name = "octopod"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# CLI and parsing
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Configuration
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async trait support
async-trait = "0.1"

# TUI
ratatui = "0.24"
crossterm = "0.27"
tui-textarea = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP and async utilities
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Git integration
git2 = "0.18"

# Terminal utilities
shell-escape = "0.1"
which = "6.0"

# Collections and utilities
indexmap = "2.1"
regex = "1.10"
once_cell = "1.19"
dashmap = "5.5"

# Process management
sysinfo = "0.30"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Database (sqlx for compile-time checked queries)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Compression for backups
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
